woody/config/iptables.save
# Generated by iptables-save v1.4.21 on Tue Jan 29 19:43:16 2019
*security
:INPUT ACCEPT [895167:246758379]
:FORWARD ACCEPT [389887:245981605]
:OUTPUT ACCEPT [847684:302349726]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
COMMIT
# Completed on Tue Jan 29 19:43:16 2019
# Generated by iptables-save v1.4.21 on Tue Jan 29 19:43:16 2019
*raw
:PREROUTING ACCEPT [1288046:493103227]
:OUTPUT ACCEPT [847684:302349726]
:OUTPUT_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A OUTPUT -j OUTPUT_direct
-A PREROUTING_ZONES -g PRE_public
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Tue Jan 29 19:43:16 2019
# Generated by iptables-save v1.4.21 on Tue Jan 29 19:43:16 2019
*filter
:INPUT ACCEPT [1143:375335]
:FORWARD ACCEPT [941:442329]
:OUTPUT ACCEPT [1125:426623]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-SERVICES - [0:0]
-A INPUT -i em1 -p udp -m udp --dport 10250 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p tcp -m tcp --dport 10250 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p udp -m udp --dport 10248 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p tcp -m tcp --dport 10248 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p udp -m udp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -i em1 -p udp -m udp --dport 8080 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p tcp -m tcp --dport 8080 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p udp -m udp --dport 6443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p tcp -m tcp --dport 6443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -s 10.244.0.0/16 -j ACCEPT
-A FORWARD -d 10.244.0.0/16 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -s 10.244.0.0/16 -m comment --comment "kubernetes forwarding conntrack pod source rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-FORWARD -d 10.244.0.0/16 -m comment --comment "kubernetes forwarding conntrack pod destination rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Tue Jan 29 19:43:16 2019
# Generated by iptables-save v1.4.21 on Tue Jan 29 19:43:16 2019
*nat
:PREROUTING ACCEPT [1:85]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1:60]
:POSTROUTING ACCEPT [2:145]
:DOCKER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-CZWIWQ4ZNG7TWID6 - [0:0]
:KUBE-SEP-GIN6KDIMOPST6HWJ - [0:0]
:KUBE-SEP-HVC3D4BPEALQXZQ2 - [0:0]
:KUBE-SEP-LCQV5PZVO4SIIPYD - [0:0]
:KUBE-SEP-S3XPRYLPLZFYH42M - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:OUTPUT_direct - [0:0]
:POSTROUTING_ZONES - [0:0]
:POSTROUTING_ZONES_SOURCE - [0:0]
:POSTROUTING_direct - [0:0]
:POST_public - [0:0]
:POST_public_allow - [0:0]
:POST_public_deny - [0:0]
:POST_public_log - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 10.244.0.0/16 -d 10.244.0.0/16 -j RETURN
-A POSTROUTING -s 10.244.0.0/16 ! -d 224.0.0.0/4 -j MASQUERADE
-A POSTROUTING ! -s 10.244.0.0/16 -d 10.244.0.0/24 -j RETURN
-A POSTROUTING ! -s 10.244.0.0/16 -d 10.244.0.0/16 -j MASQUERADE
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-SEP-CZWIWQ4ZNG7TWID6 -s 172.17.0.5/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-CZWIWQ4ZNG7TWID6 -p tcp -m tcp -j DNAT --to-destination 172.17.0.5:53
-A KUBE-SEP-GIN6KDIMOPST6HWJ -s 172.17.0.5/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-GIN6KDIMOPST6HWJ -p udp -m udp -j DNAT --to-destination 172.17.0.5:53
-A KUBE-SEP-HVC3D4BPEALQXZQ2 -s 172.17.0.9/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-HVC3D4BPEALQXZQ2 -p udp -m udp -j DNAT --to-destination 172.17.0.9:53
-A KUBE-SEP-LCQV5PZVO4SIIPYD -s 172.17.0.9/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-LCQV5PZVO4SIIPYD -p tcp -m tcp -j DNAT --to-destination 172.17.0.9:53
-A KUBE-SEP-S3XPRYLPLZFYH42M -s 192.168.70.140/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-S3XPRYLPLZFYH42M -p tcp -m tcp -j DNAT --to-destination 192.168.70.140:6443
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.244.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.244.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.244.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-CZWIWQ4ZNG7TWID6
-A KUBE-SVC-ERIFXISQEP7F7OF4 -j KUBE-SEP-LCQV5PZVO4SIIPYD
-A KUBE-SVC-NPX46M4PTMTKRN6Y -j KUBE-SEP-S3XPRYLPLZFYH42M
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-GIN6KDIMOPST6HWJ
-A KUBE-SVC-TCOU7JCQXEZGVUNU -j KUBE-SEP-HVC3D4BPEALQXZQ2
COMMIT
# Completed on Tue Jan 29 19:43:16 2019
# Generated by iptables-save v1.4.21 on Tue Jan 29 19:43:16 2019
*mangle
:PREROUTING ACCEPT [452572:159361516]
:INPUT ACCEPT [336714:83868869]
:FORWARD ACCEPT [115880:75496764]
:OUTPUT ACCEPT [303325:102947213]
:POSTROUTING ACCEPT [419205:178443977]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
:POSTROUTING_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
COMMIT
# Completed on Tue Jan 29 19:43:16 2019
